fixed responsiveness on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,9 @@ h2 {
 
 }
 
-.btn {
+.button {
     font-family: 'Lucida Sans', sans-serif ;
-    font-size: 25px;
+    font-size: 20px;
     color: #d3c5c5;
     background-color: #604646;
     border: 2px solid #444;
@@ -47,23 +47,24 @@ h2 {
     box-shadow: inset 0 0 5px #000000, 0 0 10px 2px #1a1a1a;
     cursor: pointer;
     transition: all 0.3s ease;
+ 
 }
 
-.btn:hover {
+.button:hover {
     background-color: rgb(89, 58, 58);
     color: #e1dfdf;
     border-color: #666;
     box-shadow: inset 0 0 10px #000000, 0 0 15px 4px #1a1a1a;
 }
 
-.btn:active {
+.button:active {
     background-color: #925a5a;
     border-color: #333;
     box-shadow: inset 0 0 10px #000000, 0 0 10px 2px #000000;
 }
 /*******************************************************************************header*/
 .header {
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Lucida Sans', sans-serif ;
     text-align: center;
     text-align: center;
@@ -72,27 +73,17 @@ h2 {
     -webkit-text-fill-color: transparent;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     animation: glow 1.5s infinite alternate;
-    padding: 20px;
-    margin: 20px;
+    margin-top: 10px;
 }
 .error {
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'Lucida Sans', sans-serif ;
     text-align: left;
-    background: linear-gradient(90deg, rgba(216, 213, 213, 0.954), rgba(255, 0, 0, 0.8));
+    background: linear-gradient(90deg, rgba(205, 202, 202, 0.929), rgba(255, 0, 0, 0.8));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow: 2px 2px 4px rgba(242, 239, 239, 0.7);
-    animation: glow 1.5s infinite alternate;
-
-}
-@keyframes glow {
-    from {
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7), 0 0 10px rgba(255, 255, 255, 0.564), 0 0 20px rgba(255, 0, 0, 0.5);
-    }
-     to {
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7), 0 0 20px rgba(255, 255, 255, 1), 0 0 40px rgba(255, 0, 0, 1);
-    }
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);;
+  
 }
 /********************************************************************************sparkle*/
 @keyframes sparkle {
@@ -125,8 +116,8 @@ h2 {
         margin: 0 auto;
     }
     #board {
-        height: 732px;
-        width: 400px;
+        height: 532px;
+        width: 410px;
     }
     .card {
         height: 89px;
@@ -134,7 +125,18 @@ h2 {
     }
     body {
         background-position: cover 0px; 
-        background-size: 200%;
+        background-size: 220%;
+    }
+    .header {
+        font-size: 30px;
+    }
+    .error {
+        font-size: 20px;
+    }
+    .button {
+        width: 120px;
+        height: 43px;
+        font-size: 13px;
     }
 }
 
@@ -144,16 +146,27 @@ h2 {
         margin: 0 auto;
     }
     #board {
-        height: 732px;
-        width: 450px;
+        height: 412px;
+        width: 470px;
     }
     .card {
-        height: 89px;
-        width: 72px;
+        height: 79px;
+        width: 62px;
     }
     body {
         background-position: cover 0px; 
-        background-size: 200%;
+        background-size: 100%;
+    }
+    .header {
+        font-size: 30px;
+    }
+    .error {
+        font-size: 20px;
+    }
+    .button {
+        width: 120px;
+        height: 43px;
+        font-size: 13px;
     }
 }
 
